# flet-painter

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: FletPainter.md  index.md
examples/flet_painter_example/: pyproject.toml
examples/flet_painter_example/src/: main.py  main_1.py
src/flet_painter/: __init__.py  flet_painter.py  google_fonts.py
src/flet_painter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flutter/flet_painter/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
src/flutter/flet_painter/.dart_tool/: package_config.json  package_config_subset
src/flutter/flet_painter/.dart_tool/extension_discovery/: vs_code.json
src/flutter/flet_painter/lib/: flet_painter.dart
src/flutter/flet_painter/lib/src/: create_control.dart  extension.dart  flet_painter.dart
src/flutter/flet_painter/lib/src/flutter_painter_v2/src/controllers/drawables/: image_drawable.dart
src/flutter/flet_painter/lib/src/flutter_painter_v2/src/views/widgets/: flutter_painter.dart  object_widget.dart  text_widget.dart
